# fdi-soc-BRO

./: .gitignore  Estudio Preliminar.md  README.md  analyze.py  comentarios.csv  datos.txt  grafo.py  main.py  posts.csv  pyproject.toml  requerimientos.txt  usuarios.csv
cache/: index.html
practica_1/: Untitled.ipynb  analyze.py  configuracion_p1.toml  main.py
practica_1/.ipynb_checkpoints/: grafo-checkpoint.py
practica_1/cache/: index.html
practica_2/: README.md  analisis.py  analisis_p2.md  analisis_tuits.md  comentarios.csv:Zone.Identifier  cyberpunk.csv  cyberpunk.csv:Zone.Identifier  informe.md  informe_p2.md  introduccion_p2.md  main.py  newMain.py
practica_3/: analisis.py  bitcoin_informe.md  congress_informe.md  distancia_media_congress.txt  facebook_informe.md  informep3.md  lastfm_informe.md  main.py
proyecto_final/: analisis.py  analisis_grafos.py  cargar.py  descarga.py  extract.py  grafo.py  informe_final.md  main.py
proyecto_final/cache/baitybait/: el_odio_en_internet.html  el_odio_en_internet.json  metacritic_debe_caer.html  metacritic_debe_caer.json  ser_realista_no_es_suficiente_-_bodycam.html  ser_realista_no_es_suficiente_-_bodycam.json
proyecto_final/cache/elrubiusomg/: minecraft_-_"minero"_ft._starkindj_(parodia_de_"torero"_de_chayanne).html
proyecto_final/cache/saiks/: conseguí_el_trofeo_más_difícil_de_cod_black_ops_cold_war.json
