[project]
name = "fdi-soc-bro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backoff>=2.2.1",
    "bs4>=0.0.2",
    "click>=8.1.7",
    "ipysigma>=0.24.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "networkx>=3.4",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "textblob>=0.18.0.post0",
]
