[project]
name = "fdi-soc-bro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backoff>=2.2.1",
    "bs4>=0.0.2",
    "click>=8.1.7",
    "google-api-python-client>=2.155.0",
    "ipysigma>=0.24.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "networkx>=3.4",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pyppeteer>=2.0.0",
    "pytube>=15.0.0",
    "requests>=2.32.3",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "selenium>=4.27.1",
    "spacy>=3.8.3",
    "textblob>=0.18.0.post0",
]
